crates/service/tests/code_action/snapshots/features__code_action__idx_conversion__ident_to_num.snap
---
source: crates/service/tests/code_action/idx_conversion.rs
expression: response
---
[
  {
    "title": "Convert identifier to numeric idx",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 3,
                "character": 10
              },
              "end": {
                "line": 3,
                "character": 12
              }
            },
            "newText": "0"
          }
        ]
      }
    }
  }
]
