crates/service/tests/code_action/snapshots/features__code_action__idx_conversion__local.snap
---
source: crates/service/tests/code_action/idx_conversion.rs
expression: response
---
[
  {
    "title": "Convert identifier to numeric idx",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 3,
                "character": 15
              },
              "end": {
                "line": 3,
                "character": 17
              }
            },
            "newText": "1"
          }
        ]
      }
    }
  }
]
