crates/service/tests/code_action/snapshots/features__code_action__idx_conversion__num_to_ident.snap
---
source: crates/service/tests/code_action/idx_conversion.rs
expression: response
---
[
  {
    "title": "Convert numeric idx to identifier",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 3,
                "character": 9
              },
              "end": {
                "line": 3,
                "character": 10
              }
            },
            "newText": "$f"
          }
        ]
      }
    }
  }
]
